--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,45 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.6       
-aiohttp-retry==2.9.0  
-aiosignal==1.3.1      
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiohttp-retry==2.9.0
+aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.6.0
+anyio==4.6.2.post1
 asgiref==3.8.1
 attrs==24.2.0
-azure-ai-documentintelligence==1.0.0b4
-azure-ai-formrecognizer==3.3.3
-azure-common==1.1.28
-azure-core==1.32.0
-azure-identity==1.19.0
-babel==2.16.0
 blinker==1.8.2
 certifi==2024.8.30
-cffi==1.17.1
-channels==4.1.0
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
-comtypes==1.4.8
-cryptography==43.0.3
 distro==1.9.0
-Django==5.1.1
-django-cors-headers==4.6.0
-docxcompose==1.4.0
-docxtpl==0.19.0
-et-xmlfile==1.1.0
+Django==5.1.2
 Flask==3.0.3
-frozenlist==1.4.1
+frozenlist==1.5.0
 h11==0.14.0
-httpcore==1.0.5
+httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
-isodate==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
-jiter==0.5.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain-core==0.3.19
-langchain-openai==0.2.9
-langsmith==0.1.143
-logging==0.4.9.6
-lxml==5.3.0
+jiter==0.6.1
 MarkupSafe==3.0.2
-msal==1.31.1
-msal-extensions==1.2.0
-msrest==0.7.1
 multidict==6.1.0
-numpy==2.1.2
-oauthlib==3.2.2
-openai==1.54.5
-openpyxl==3.1.5
-orjson==3.10.11
-packaging==24.2
-pandas==2.2.3
-pdfminer.six==20231228
-pdfplumber==0.11.4
-pillow==11.0.0
-portalocker==2.10.1
-psycopg2-binary==2.9.10
-pycparser==2.22
+openai==1.52.2
+propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
-pygame==2.6.1
 PyJWT==2.9.0
-pypdfium2==4.30.0
-pypiwin32==223
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
 python-dotenv==1.0.1
-pyttsx3==2.98
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-regex==2024.11.6
 requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-setuptools==75.6.0
-six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
-tenacity==9.0.0
-tiktoken==0.8.0
-tqdm==4.66.5
+tqdm==4.66.6
 twilio==9.3.6
 typing_extensions==4.12.2
-tzdata==2024.1
+tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.0.6
+yarl==1.17.0
 whitenoise==6.8.2
-xlrd==2.0.1
-yarl==1.12.1
+psycopg2-binary==2.9.10
+django-cors-headers==4.6.0
